Covenant Bug Fixes
* Allow ALCS users to delete files from portal
* Hide vertical scrollbar

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/cove-details/cove-details.component.scss
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/cove-details/cove-details.component.scss
@@ -6,4 +6,5 @@
   grid-column-gap: 36px;
   grid-row-gap: 12px;
   margin-bottom: 12px;
+  overflow-y: hidden;
 }
